# uriLocalShare

./: package-lock.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build_error.txt  build_error_current.txt  build_error_v2.txt  build_error_v3.txt  build_error_v4.txt  build_error_v5.txt  build_error_v6.txt  build_error_v7.txt  build_error_v8.txt  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  p2p.rs  server.rs  types.rs
