[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libp2p = { version = "0.56.0", features = ["noise", "tcp", "yamux", "mdns", "gossipsub", "request-response", "json", "identify", "kad", "macros", "tokio"] }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.102"
mdns-sd = "0.18.1"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
local-ip-address = "0.6.10"
tokio-util = { version = "0.7.18", features = ["io"] }
urlencoding = "2.1.3"
gethostname = "1.1.0"

